@@ -33,3 +33,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
 
 }
+tasks.withType( JavaCompile ).configureEach {
+    options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
+}
